sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:9: error: Unmatched closing brace '}' ignored here
                       b-=1}}
                           ^