sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {var b=getNombreValeurs()-2 
                     var inv=true
                     do {inv=false
                       for (j<- 0 to b)
                     {if (!plusPetit (j,j+1)) {
       echange(j,j+1)

                       b-=1}}
                     for (j<-b to 0 by -1)
                     {if (!plusPetit (j,j+1)) 
                     {echange(j,j+1)
                      j+=1
                      inv=true}}}}
                     while (inv==true)}
                      
                     




